# coach-cutups

./: .gitignore  .rustfmt.toml  BACKLOG.md  CLAUDE.md  Cargo.toml  PROGRESS.txt  README.md  project.yml
.github/workflows/: rust.yml
App/: ContentView.swift  Info.plist  VideoCoach-Bridging-Header.h  VideoCoachApp.swift
App/Capture/: CaptureSessionController.swift
App/Drawing/: DrawingOverlay.swift  DrawingOverlayView.swift
App/Export/: ExportSheet.swift
App/Models/: DeviceCatalog.swift  Workspace.swift
App/Preview/: ClipPreviewBuilder.swift  PreviewCompositor.swift  PreviewInstruction.swift  StrokeReplayLayer.swift
App/Source/: CGLBridge.h  GLMetalBridge.swift  MPVSourcePlayer.swift
App/Views/: ClipCommands.swift  ClipInspector.swift  ClipSidebar.swift  GLBridgeDemoView.swift  KeyCommandView.swift  MPVDebugWindow.swift  MPVPlayerView.swift  PlayerSurface.swift  TagField.swift  TransportBar.swift
AppUITests/: MPVBringUpWindowTests.swift  MPVMountRemountTests.swift
Tests/AppTests/: GLMetalBridgeRenderTests.swift  GLMetalBridgeTests.swift
VideoCoachCore/Sources/VideoCoachCore/: CommentaryEvent.swift  CompilationCompositor.swift  CompilationExporter.swift  CompilationInstruction.swift  CompilationPlan.swift  Placeholder.swift  PlaybackTimeline.swift  PreviewCompositor.swift  PreviewInstruction.swift  Project.swift  ProjectStore.swift  SkipCoordinator.swift  StrokeReplay.swift
VideoCoachCore/Tests/VideoCoachCoreTests/: AssetTracksTests.swift  CommentaryEventTests.swift  CompilationCompositorTests.swift  CompilationExporterTests.swift  CompilationPlanTests.swift  ExportSettingsTests.swift  ExportSpikeTests.swift  PlaceholderTests.swift  PlaybackTimelineTests.swift  PreviewCompositorTests.swift  ProjectStoreTests.swift  ProjectTests.swift  SkipCoordinatorTests.swift  StrokeTests.swift  WorkspaceCumulativeTests.swift
apple/: project.yml
apple/App/: BuildInfo.swift  ContentView.swift  VideoCoach.entitlements  VideoCoachApp.swift
apple/App/Capture/: CaptureSessionController.swift
apple/App/Drawing/: DrawingOverlay.swift  DrawingOverlayView.swift
apple/App/Export/: ExportSheet.swift
apple/App/Intelligence/: AppleClipIntelligence.swift  Workspace+TranscriptionWorkspace.swift
apple/App/Models/: AppMode.swift  Workspace.swift
apple/App/Preview/: ClipPreviewBuilder.swift  StrokeReplayLayer.swift
apple/App/Recording/: RecordingController.swift
apple/App/Source/: MPVMetalLayer.swift  MPVSourcePlayer.swift
apple/App/Views/: ClipCommands.swift  ClipInspector.swift  ClipSidebar.swift  DevicesCommands.swift  KeyCommandView.swift  MPVPlayerView.swift  TagField.swift  TransportBar.swift  ZoomIndicator.swift
apple/AppUITests/: MPVZoomPlaybackTests.swift
apple/Tests/AppTests/: ClipPreviewBuilderTests.swift  RecordingZoomCaptureTests.swift
apple/VideoCoachCore/: Package.swift
apple/docs/plans/: 2026-04-28-avcapture-sessionqueue-refactor.md  2026-04-29-preview-perf-skip-coalesce-and-gpu-compositor.md  2026-05-01-source-playback-metal-render-swap.md  2026-05-01-source-playback-mpv-migration-design.md  2026-05-01-source-playback-vo-gpu-next.md  2026-05-01-video-zoom-design.md  2026-05-01-video-zoom.md
apple/scripts/: install.sh  make-icon.swift  run-release.sh  run.sh  sign.sh
crates/video-coach-app/: Cargo.toml  build.rs
crates/video-coach-app/src/: bus.rs  cli.rs  control_socket.rs  event_layer.rs  filename.rs  frame_sink.rs  last_project.rs  logging.rs  main.rs  protocol.rs  ui.rs
crates/video-coach-app/ui/: main.slint
crates/video-coach-compositor/: Cargo.toml
crates/video-coach-compositor/src/: compositor.rs  frame.rs  lib.rs
crates/video-coach-compositor/tests/: parity_smoke.rs  perf_smoke.rs
crates/video-coach-core/: Cargo.toml
crates/video-coach-core/src/: compilation_plan.rs  denormalize.rs  event.rs  export_settings.rs  lib.rs  project.rs  project_store.rs  stroke.rs  stroke_replay.rs  tag_aggregation.rs  test_fixtures.rs  timeline.rs
crates/video-coach-harness/: Cargo.toml
crates/video-coach-harness/src/: lib.rs
crates/video-coach-harness/tests/: export_multi_source_smoke.rs  export_multi_tag_smoke.rs  export_partial_failure_smoke.rs  export_resume_smoke.rs  export_smoke.rs  open_project_smoke.rs  preview_clip_smoke.rs  record_clip_smoke.rs  recording_smoke.rs  smoke.rs
crates/video-coach-harness/tests/common/: mod.rs
crates/video-coach-media/: Cargo.toml
crates/video-coach-media/src/: compose.rs  export.rs  fixture_source.rs  lib.rs  platform_source.rs  preview_pipeline.rs  recording.rs  source.rs  source_player.rs
crates/video-coach-media/tests/: export_smoke.rs  parity_n_frames.rs  platform_source_smoke.rs  preview_pipeline_smoke.rs  record_fixture.rs  source_player.rs
docs/: SETUP.md
docs/plans/: 2026-04-27-video-coach-design.md  2026-04-27-video-coach-plan.md  2026-04-28-rust-rewrite-design.md  2026-04-28-rust-rewrite-phase-1-core.md  2026-04-28-rust-rewrite-phase-2-testability.md  2026-04-29-rust-rewrite-phase-3-capture.md  2026-04-29-rust-rewrite-phase-4-compositor.md  2026-04-29-rust-rewrite-phase-5-compose-bridge.md  2026-04-29-rust-rewrite-phase-6-ui-shell.md  2026-04-30-rust-rewrite-phase-7-source-transport.md  2026-04-30-rust-rewrite-phase-8-recording.md  2026-04-30-rust-rewrite-phase-9-clip-preview.md  2026-05-01-rust-rewrite-phase-10-export-sheet.md  2026-05-01-rust-rewrite-phase-11-audio-mix.md  2026-05-01-rust-rewrite-phase-11-compositor-perf.md  2026-05-01-rust-rewrite-phase-11-coverage-hardening.md  2026-05-01-rust-rewrite-phase-11-export-ux-polish.md  2026-05-01-rust-rewrite-phase-11-hevc-encoder.md  2026-05-01-rust-rewrite-phase-11-real-progress-pct.md  2026-05-01-rust-rewrite-phase-11-resume-failed-exports.md  2026-05-01-source-playback-mpv-migration.md  PHASE_5_INVESTIGATION_NOTES.md
docs/superpowers/plans/: 2026-05-09-back-button-and-undo.md  2026-05-11-jump-to-clip-start.md  2026-05-11-tag-overview-and-filter.md  2026-05-12-compositor-gpu-render.md  2026-05-12-export-progress-detail.md  2026-05-17-hide-pip.md  (+5 more)
fixtures/: manifest.json
scripts/: fetch-fixtures.sh  run-rust.sh  run.sh
(+85 files in other folders)
