# Cargo.toml
[workspace]
resolver = "2"
members = ["crates/video-coach-core", "crates/video-coach-app", "crates/video-coach-harness"]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "AGPL-3.0-only"
repository = "https://github.com/tayl0r/coach-cutups"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
thiserror = "2"
