[package]
name = "video-coach-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["control-socket"]
# When disabled (release packaging: --no-default-features), the control socket
# adapter is compiled out entirely. The app cannot be remote-driven.
control-socket = []
# Recording machinery: pulls in video-coach-media + gstreamer system libs.
# Without this feature, StartRecording / StopRecording return errors at
# runtime and the binary builds with no GStreamer dependency.
media = ["dep:video-coach-media"]

[dependencies]
video-coach-core = { path = "../video-coach-core" }
video-coach-media = { path = "../video-coach-media", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
slint = { workspace = true }
rfd = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }
