[package]
name = "video-coach-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["control-socket"]
# When disabled (release packaging: --no-default-features), the control socket
# adapter is compiled out entirely. The app cannot be remote-driven.
control-socket = []
# Recording machinery: pulls in video-coach-media + gstreamer system libs.
# Without this feature, StartRecording / StopRecording return errors at
# runtime and the binary builds with no GStreamer dependency.
# Phase 7 added video-coach-media's `media` feature gating around the
# source_player + compose modules; propagate it through.
media = ["dep:video-coach-media", "video-coach-media/media"]

[dependencies]
video-coach-core = { path = "../video-coach-core" }
video-coach-media = { path = "../video-coach-media", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
slint = { workspace = true }
rfd = { workspace = true }
# Phase 7. Cross-platform relative-path computation (handles `..`
# traversal on Windows + Unix uniformly).
pathdiff = "0.2"
# Phase 8. Clip identity (UUIDs in clip filenames + project.json) and
# `Clip.created_at` timestamps. Both already pulled in transitively
# via video-coach-core; declared here directly so the bus's clip-
# building code doesn't depend on transitive crates.
uuid = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }

[dev-dependencies]
# Slint's testing backend lets component tests run headless (no winit
# window). Pinned to the same minor as the runtime slint dep.
i-slint-backend-testing = "1.8"
tempfile = "3"
