[package]
name = "video-coach-harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Stub feature flag for tests that need a media-enabled video-coach-app
# binary. Phase 3's recording_smoke test is gated on this; running with
# `cargo test --workspace --features media` enables both this and the
# matching feature on video-coach-app, so the spawned binary supports
# StartRecording / StopRecording.
media = []

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "process", "time", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tempfile = "3"
uuid = { workspace = true }
video-coach-core = { path = "../video-coach-core" }
