[package]
name = "video-coach-harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Stub feature flag for tests that need a media-enabled video-coach-app
# binary. Phase 3's recording_smoke test is gated on this; running with
# `cargo test --workspace --features media` enables both this and the
# matching feature on video-coach-app, so the spawned binary supports
# StartRecording / StopRecording.
media = []

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "process", "time", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tempfile = "3"
uuid = { workspace = true }
video-coach-core = { path = "../video-coach-core" }
# Phase 11 Plan #6 code-review fix F5. The Resume-skip E2E test asserts
# byte-for-byte file invariance across a skip via SHA-256 of the first
# 1 KiB — strictly stronger than the mtime-equality check it replaced
# (per plan adv-fix #7: SHA is the canonical witness; mtime is
# informational and can drift on Windows VM filesystems unrelated to
# writes). sha2 is already pulled in as a transitive dep so this adds
# zero net build cost.
sha2 = "0.10"
