[package]
name = "video-coach-media"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Phase 4 added a stub `media = []`. Phase 5 expands it: enabling `media`
# also pulls in video-coach-compositor (and transitively wgpu).
media = ["dep:video-coach-compositor"]

[dependencies]
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"
gstreamer-audio = "0.23"
thiserror = { workspace = true }
tracing = "0.1"
video-coach-compositor = { path = "../video-coach-compositor", optional = true }

[dev-dependencies]
tempfile = "3"
