[package]
name = "video-coach-media"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Phase 4 added a stub `media = []`. Phase 5 expands it: enabling `media`
# also pulls in video-coach-compositor (and transitively wgpu). Phase 9
# Task 2 adds video-coach-core (Clip, playback_segments, source_time_at,
# visible_strokes) which the preview pipeline needs.
media = ["dep:video-coach-compositor", "dep:video-coach-core", "dep:uuid"]

[dependencies]
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"
gstreamer-audio = "0.23"
# Phase 7 — Discoverer for source-video duration probing
# (AddSourceVideo bus command).
gstreamer-pbutils = "0.23"
thiserror = { workspace = true }
tracing = "0.1"
video-coach-compositor = { path = "../video-coach-compositor", optional = true }
# Phase 9 Task 2. The preview pipeline consumes Clip + playback_segments
# + source_time_at + visible_strokes. Optional + gated by `media` so the
# no-media build stays free of the compositor/wgpu transitive deps.
video-coach-core = { path = "../video-coach-core", optional = true }
# Phase 10 Task 1: the export module's public API exposes `HashMap<Uuid, _>`
# (`recording_paths`) so we need uuid as a non-dev dep when `media` is on.
# Optional so non-media builds stay lean.
uuid = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
# Phase 9 Task 2. The preview-pipeline smoke test builds a Clip directly.
# Always-available regardless of feature gates — `cargo test --features
# media` is the only configuration that exercises the test.
uuid = { workspace = true }
chrono = { workspace = true }
